--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -37,10 +37,10 @@
     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" *ngFor="let offer of popularOffers"
          style="padding: 10px;">
       <div class="card">
-        <img class="card-img-top" [src]="'/storage/' + offer.photo" alt="{{offer.name}}" style="height: 200px;">
+        <img [routerLink]="'/offer/' + offer.id" class="card-img-top" [src]="'/storage/' + offer.photo" alt="{{offer.name}}" style="height: 200px;">
         <div class="price">{{offer.price}}zł</div>
         <div class="card-header oneline">
-          <b>
+          <b [routerLink]="'/offer/' + offer.id">
           {{offer.name}}
           </b>
         </div>
