--- a/src/app/modules/offer/offer/offer.component.html
+++ b/src/app/modules/offer/offer/offer.component.html
@@ -98,7 +98,7 @@
         <strong>Opis:</strong>
         <br />
         <br />
-        <div style="line-height: 8px;" [innerHTML]="offer.description"></div>
+        <div [innerHTML]="offer.description"></div>
       </div>
     </div>
     <div class="text-sm-right" style="padding: 10px 15px;">Wyświetlenia: {{offer.visitCounter}}</div>
